--- a/services.html
+++ b/services.html
@@ -91,7 +91,7 @@
       </a> -->
           <h2 class=" mb-4 text-center">About Service</h2>
 
-          <p class="font-weight-normal " style="padding:20px;">Lorem Ipsum is simply dummy text of the printing and
+          <p class="font-weight-normal text-center" style="padding:20px;">Lorem Ipsum is simply dummy text of the printing and
             typesetting industry. Lorem
             Ipsum has been the industry's standard dummypx text ever since the 1500s, when an unknown printer took a
             galley of type and scrambled it to make a type specimen book.
