--- a/team.html
+++ b/team.html
@@ -80,9 +80,9 @@
         </nav>
         <!--/.Navbar -->
     </section>
-    <section class="container mb-5" style="margin-top:80px">
+    <section class="container mt-5 mb-5">
         <div class="row">
-            <p class="team-head text-center my-5 mx-auto">Our Team</p>
+            <h1 class="text-center font-weight-light my-5 mx-auto">Our Team</h1>
         </div>
         <div class="row">
             <!-- Card -->
