--- a/vision.html
+++ b/vision.html
@@ -77,11 +77,11 @@
   </section>
   <section class="container">
     <div class="row">
-      <h1 class="font-weight-bold mt-3 mx-auto text-dark">Vision</h1>
+      <h1 class="mt-5 mx-auto text-dark">Vision</h1>
     </div>
     <div class="row">
-      <div class="left col m-1 mt-3 mb-5 mx-auto mt-sm-3">
-        <p class="left-text h4-responsive" style="font-weight: 400;margin-top: auto;margin-bottom: auto;text-align: justify;padding: 10px;">
+      <div class="left col mx-auto mt-sm-3">
+        <p class="left-text" style="font-weight: normal;text-align: justify;padding: 10px;">
           We endeavour to infuse technology with agriculture to bring out a revolutionary change through product
           development which can ramp up crop growth and harvest with minimal resources and capital . We want society to
           dine with quality produce rich in nutrients and get rid of pesticides and other life threatening chemicals
@@ -89,8 +89,8 @@
           they get their deserved remuneration.
         </p>
       </div>
-      <div class="col right m-1 mx-auto mt-sm-5">
-        <img src="img/field2.jpg" class="mt-sm-5 img-fluid" alt="Responsive image">
+      <div class="col right mx-auto mt-sm-3">
+        <img src="img/field2.jpg" class="img-fluid" alt="Responsive image">
       </div>
     </div>
   </section>
