--- a/product.html
+++ b/product.html
@@ -77,17 +77,17 @@
     </nav>
     <!--/.Navbar -->
   </section>
-  <section class="container" style="overflow-y: hidden;">
+  <section class="container mt-5" style="overflow-y: hidden;">
     <div class="jumbotron text-center p-4 mt-5"> 
     <div class="row">
       <div class="col-md-7 text-md-left ml-3 mt-5">
-        <h1 class="mb-4 text-center font-weight-bold">Agricultural Products</h1>
+        <h1 class="mb-4 text-center ">Agricultural Products</h1>
         <p class="font-weight-normal" style="padding: 20px;">
         Agrivator provides fresh and safe to eat vegetables and fruits from 'farm to fork'. The produce is sourced from
         clusters of farms under Agrivator across Kerala.
         </p>
       </div>
-      <div class="col-md-4 offset-md-1 mx-3 my-3 ">
+      <div class="col-md-4 mx-3 mt-sm-5">
         <div class="view overlay">
         <img class="img-fluid" src="img/horticulture_video.jpg">
       </div>
@@ -108,14 +108,14 @@
     <div class="jumbotron text-center p-4 mt-5"> 
     <div class="row">
       <div class="col-md-7 text-md-left ml-3 mt-5">
-        <h1 class="mb-4 text-center font-weight-bold">Airfarms</h1>
+        <h1 class="mb-4 text-center ">Airfarms</h1>
         <p class="font-weight-normal" style="padding: 20px;">
           Agrivator uses fully automated Aeroponic systems in our Airfarms to grow
            crops efficiently. It is a soil less method of cultivation where plant roots 
            are suspended in the air and nutrients are directly sprayed by a pump at regular intervals. Also this portable system, where a single tower can hold upto 32 plants requires only limited space & could easily be set up in your home and Agrivator would do it for you. 
         </p>
       </div>
-      <div class="col-md-4 offset-md-1 mx-3 my-3 ">
+      <div class="col-md-4 mx-3 mt-sm-5 ">
         <div class="view overlay">
         <img class="img-fluid" src="img/air.jpg">
       </div>
@@ -136,7 +136,7 @@
     <div class="jumbotron text-center p-4 mt-5"> 
     <div class="row">
       <div class="col-md-7 text-md-left ml-3 mt-5">
-        <h1 class="mb-4 text-center font-weight-bold">Growbags</h1>
+        <h1 class="mb-4 text-center ">Growbags</h1>
         <p class="font-weight-normal" style="padding: 20px;">
           If you are not so keen on employing soil-less farming in the beginning, you could always 
           start with our big and strong grow bags. In regular pots, the roots of the plants tend to grow 
@@ -149,7 +149,7 @@
           other advantages include easy storage and versatility. 
         </p>
       </div>
-      <div class="col-md-4 offset-md-1 mx-3 my-3 ">
+      <div class="col-md-4 offset-md-1 mx-3 mt-sm-5">
         <div class="view overlay">
         <img class="img-fluid" src="img/Grow_Bag.png">
       </div>
