--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
 <section>
+  <div id='onam'>
+    <center>
+    <video autoplay>
+      <source src='./onam.mp4' type="video/mp4">
+    </video>
+  </center>
+  </div> 
   <div class="jumbotron text-center">
     <h1>What we are?</h1>
     <p style="font-weight: 400;">We are a startup which combines modern techniques with traditional methods to increase productivity of crops. We
