--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <div class='container'>
@@ -31,6 +32,7 @@
         letter-spacing: 0.04em;
         font-size: 2em;
         margin-top: 25px;
+        font-family: 'Inter', sans-serif;
     }
     #logo{
         position: absolute;
