Fast and shoddy. (This is not my MO)

--- a/product.html
+++ b/product.html
@@ -21,7 +21,8 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- <link rel="stylesheet" href="home.css"> -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link href="//db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text" rel="stylesheet" type="text/css"/>
+  <link href="//db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text" rel="stylesheet"
+    type="text/css" />
 </head>
 
 <body style="overflow: hidden;">
@@ -33,7 +34,8 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <div>
-            <img class="logo" src="img/Logo with Side Text - White.png" style="width: 180px;"></div>
+            <img class="logo" src="img/Logo with Side Text - White.png" style="width: 180px;">
+          </div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
           aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,93 +80,176 @@
     <!--/.Navbar -->
   </section>
   <section class="container mt-5" style="overflow-y: hidden;">
-    <div class="jumbotron text-center p-4 mt-5"> 
-    <div class="row">
-      <div class="col-md-7 text-md-left ml-3 mt-5">
-        <h1 class="mb-4 text-center ">Agricultural Products</h1>
-        <p class="font-weight-normal" style="padding: 20px;">
-        Agrivator provides fresh and safe to eat vegetables and fruits from 'farm to fork'. The produce is sourced from
-        clusters of farms under Agrivator across Kerala.
+    <div class="jumbotron text-center p-4 mt-5">
+      <div class="row">
+        <div class="col-md-7 text-md-left ml-3 mt-5">
+          <h1 class="mb-4 text-center ">Agricultural Products</h1>
+          <p class="font-weight-normal" style="padding: 20px;">
+            Agrivator provides fresh and safe to eat vegetables and fruits from 'farm to fork'. The produce is sourced
+            from
+            clusters of farms under Agrivator across Kerala.
+          </p>
+        </div>
+        <div class="col-md-4 mx-3 mt-sm-5">
+          <div class="view overlay">
+            <img class="img-fluid" src="img/horticulture_video.jpg">
+          </div>
+        </div>
+      </div>
+      <div class="section-button mx-auto">
+        <p class="text-center">
+          <a href="agri-product.html">
+            <button type="button" class="btn section-button"
+              style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
+          </a>
         </p>
       </div>
-      <div class="col-md-4 mx-3 mt-sm-5">
-        <div class="view overlay">
-        <img class="img-fluid" src="img/horticulture_video.jpg">
-      </div>
-      </div>
+      <hr class="mt-3 mb-3">
     </div>
-    <div class="section-button mx-auto">
-      <p class="text-center">
-        <a href="agri-product.html">
-          <button type="button" class="btn section-button"
-            style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
-        </a>
-      </p>
-    </div>
-    <hr class="mt-3 mb-3">
-  </div>
   </section>
   <section class="container" style="overflow-y: hidden;">
-    <div class="jumbotron text-center p-4 mt-5"> 
-    <div class="row">
-      <div class="col-md-7 text-md-left ml-3 mt-5">
-        <h1 class="mb-4 text-center ">Airfarms</h1>
-        <p class="font-weight-normal" style="padding: 20px;">
-          Agrivator uses fully automated Aeroponic systems in our Airfarms to grow
-           crops efficiently. It is a soil less method of cultivation where plant roots 
-           are suspended in the air and nutrients are directly sprayed by a pump at regular intervals. Also this portable system, where a single tower can hold upto 32 plants requires only limited space & could easily be set up in your home and Agrivator would do it for you. 
+    <div class="jumbotron text-center p-4 mt-5">
+      <div class="row">
+        <div class="col-md-7 text-md-left ml-3 mt-5">
+          <h1 class="mb-4 text-center ">Airfarms</h1>
+          <p class="font-weight-normal" style="padding: 20px;">
+            Agrivator uses fully automated Aeroponic systems in our Airfarms to grow
+            crops efficiently. It is a soil less method of cultivation where plant roots
+            are suspended in the air and nutrients are directly sprayed by a pump at regular intervals. Also this
+            portable system, where a single tower can hold upto 32 plants requires only limited space & could easily be
+            set up in your home and Agrivator would do it for you.
+          </p>
+        </div>
+        <div class="col-md-4 mx-3 mt-sm-5 ">
+          <div class="view overlay">
+            <img class="img-fluid" src="img/air.jpg">
+          </div>
+        </div>
+      </div>
+      <div class="section-button mx-auto">
+        <p class="text-center">
+          <a href="agri-product.html">
+            <button type="button" class="btn section-button"
+              style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
+          </a>
         </p>
       </div>
-      <div class="col-md-4 mx-3 mt-sm-5 ">
-        <div class="view overlay">
-        <img class="img-fluid" src="img/air.jpg">
-      </div>
-      </div>
+      <hr class="mt-3 mb-3">
     </div>
-    <div class="section-button mx-auto">
-      <p class="text-center">
-        <a href="agri-product.html">
-          <button type="button" class="btn section-button"
-            style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
-        </a>
-      </p>
-    </div>
-    <hr class="mt-3 mb-3">
-  </div>
   </section>
   <section class="container" style="overflow-y: hidden;">
-    <div class="jumbotron text-center p-4 mt-5"> 
-    <div class="row">
-      <div class="col-md-7 text-md-left ml-3 mt-5">
-        <h1 class="mb-4 text-center ">Growbags</h1>
-        <p class="font-weight-normal" style="padding: 20px;">
-          If you are not so keen on employing soil-less farming in the beginning, you could always 
-          start with our big and strong grow bags. In regular pots, the roots of the plants tend to grow 
-          in circles entangling themselves. This leads to oxygenation or water stagnation issues. The roots 
-          become constricted leading to less water and nutrient intake. Grow bags help to alleviate 
-          this issue because as the roots come in contact with the edges of the fabric pot they sense 
-          the drier soil that is exposed to the air. This prevents over growth of roots eliminating girdling roots. 
-          A more fibrous root system allows the plants to take in more nutrients and water. Grow bags regulate temperature 
-          due to their breathable quality. Excess heat is able to escape from all sides of the grow bag. The 
-          other advantages include easy storage and versatility. 
+    <div class="jumbotron text-center p-4 mt-5">
+      <div class="row">
+        <div class="col-md-7 text-md-left ml-3 mt-5">
+          <h1 class="mb-4 text-center ">Advanced Automatic Irrigation System</h1>
+          <p class="font-weight-normal" style="padding: 20px;">
+            AAIS is a complete irrigation solution for farmers, harnessing the power of AI, and Data Science. 
+          </p>
+        </div>
+        <div class="col-md-4 mx-3 mt-sm-5 ">
+          <div class="view overlay">
+            <img class="img-fluid" src="img/IRRIGATION.jpg">
+          </div>
+        </div>
+      </div>
+      <div class="section-button mx-auto">
+        <p class="text-center">
+          <a href="agri-product.html">
+            <button type="button" class="btn section-button"
+              style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
+          </a>
         </p>
       </div>
-      <div class="col-md-4 offset-md-1 mx-3 mt-sm-5">
-        <div class="view overlay">
-        <img class="img-fluid" src="img/Grow_Bag.png">
-      </div>
-      </div>
+      <hr class="mt-3 mb-3">
     </div>
-    <div class="section-button mx-auto">
-      <p class="text-center">
-        <a href="agri-product.html">
-          <button type="button" class="btn section-button"
-            style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
-        </a>
-      </p>
+  </section>
+  <section class="container" style="overflow-y: hidden;">
+    <div class="jumbotron text-center p-4 mt-5">
+      <div class="row">
+        <div class="col-md-7 text-md-left ml-3 mt-5">
+          <h1 class="mb-4 text-center ">Dart</h1>
+          <p class="font-weight-normal" style="padding: 20px;">
+            Dart is a localised cluster based commodity delivery system. With Dart, we aim to bridge the gap between the small farmer and the consumer. We provide a platform for consumers to directly purchase vegetables and other commodities from small scale farmers.
+          </p>
+        </div>
+        <div class="col-md-4 mx-3 mt-sm-5 ">
+          <div class="view overlay">
+            <img class="img-fluid" src="img/dart.jpg">
+          </div>
+        </div>
+      </div>
+      <div class="section-button mx-auto">
+        <p class="text-center">
+          <a href="agri-product.html">
+            <button type="button" class="btn section-button"
+              style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
+          </a>
+        </p>
+      </div>
+      <hr class="mt-3 mb-3">
     </div>
-    <hr class="mt-3 mb-3">
-  </div>
+  </section>
+  <section class="container" style="overflow-y: hidden;">
+    <div class="jumbotron text-center p-4 mt-5">
+      <div class="row">
+        <div class="col-md-7 text-md-left ml-3 mt-5">
+          <h1 class="mb-4 text-center ">Actuators</h1>
+          <p class="font-weight-normal" style="padding: 20px;">
+            Agrivator is a proud purveyor of a wide range of actuators. We provide electric, pneumatic and hydraulic
+            actuators which are optimised to suit your needs.
+          </p>
+        </div>
+        <div class="col-md-4 mx-3 mt-sm-5 ">
+          <div class="view overlay">
+            <img class="img-fluid" src="img/actuator.png">
+          </div>
+        </div>
+      </div>
+      <div class="section-button mx-auto">
+        <p class="text-center">
+          <a href="agri-product.html">
+            <button type="button" class="btn section-button"
+              style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
+          </a>
+        </p>
+      </div>
+      <hr class="mt-3 mb-3">
+    </div>
+  </section>
+  <section class="container" style="overflow-y: hidden;">
+    <div class="jumbotron text-center p-4 mt-5">
+      <div class="row">
+        <div class="col-md-7 text-md-left ml-3 mt-5">
+          <h1 class="mb-4 text-center ">Growbags</h1>
+          <p class="font-weight-normal" style="padding: 20px;">
+            If you are not so keen on employing soil-less farming in the beginning, you could always
+            start with our big and strong grow bags. In regular pots, the roots of the plants tend to grow
+            in circles entangling themselves. This leads to oxygenation or water stagnation issues. The roots
+            become constricted leading to less water and nutrient intake. Grow bags help to alleviate
+            this issue because as the roots come in contact with the edges of the fabric pot they sense
+            the drier soil that is exposed to the air. This prevents over growth of roots eliminating girdling roots.
+            A more fibrous root system allows the plants to take in more nutrients and water. Grow bags regulate
+            temperature
+            due to their breathable quality. Excess heat is able to escape from all sides of the grow bag. The
+            other advantages include easy storage and versatility.
+          </p>
+        </div>
+        <div class="col-md-4 offset-md-1 mx-3 mt-sm-5">
+          <div class="view overlay">
+            <img class="img-fluid" src="img/Grow_Bag.png">
+          </div>
+        </div>
+      </div>
+      <div class="section-button mx-auto">
+        <p class="text-center">
+          <a href="agri-product.html">
+            <button type="button" class="btn section-button"
+              style="background-color: #78b122;border-radius: 50px;color: white;">More Products</button>
+          </a>
+        </p>
+      </div>
+      <hr class="mt-3 mb-3">
+    </div>
   </section>
   <section>
 
@@ -231,4 +316,4 @@
 
 </body>
 
-</html>
+</html>F
