--- a/index1.html
+++ b/index1.html
@@ -20,14 +20,12 @@
 
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-  
+
   <div class="jumbotron text-center">
     <h1>What we are?</h1>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam
-      malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
-      Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim
-      pellentesque felis.Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a,
-      ultricies in, diam. Sed arcu. Cras consequat.</p>
+    <p>We are a startup which combines modern methods with traditional ways to increase productivity of crops. We aim to
+      bring a change in the field of agriculture by efficient combination of technologies like artificial intelligence.
+    </p>
   </div>
   <div allign="center" class="embed-responsive embed-responsive-16by9" style="position: relative; top: -10px;">
     <video controls loop class="embed-responsive-item">
@@ -37,12 +35,10 @@
   <div class="container-fluid" style="padding: 60px 50px;">
     <div class="row">
       <div class="col-sm-8">
-        <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br> Donec odio. Quisque volutpat mattis <br>eros.
-          Nullam malesuada erat ut turpis. Suspendisse urna nibh, <br>viverra non, semper suscipit, posuere a, pede.
+        <h4>We provide a platform for farmers to sell their produce at a reasonable price which will be delivered to the
+          customers as requirement. We also focus on creating new products which employs modern technologies to make
+          farming simpler.
         </h4>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis <br>eros.
-          Nullam malesuada erat ut turpis. Suspendisse urna nibh,<br> viverra non, semper suscipit, posuere a, pede..
-        </p>
       </div>
       <div class="col-sm-4">
         <img src="img/vegtables.jpg">
@@ -50,7 +46,7 @@
     </div>
   </div>
 
-  <div class="container-fluids center">
+  <!-- <div class="container-fluids center">
     <div class="row center">
       <div class="center-block">
         <div class="col-sm-6 center">
@@ -89,45 +85,7 @@
         </div>
       </div>
     </div>
-  </div>
-
-
-  <div class="review">
-    <h2 class="text-center">What our customers say</h2>
-    <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <h4>"This company is the best. I am so happy with the result!"<br><span style="font-style:normal;">Michael
-              Roe, Vice President, Comment Box</span></h4>
-        </div>
-        <div class="item">
-          <h4>"One word... WOW!!"<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
-        </div>
-        <div class="item">
-          <h4>"Could I... BE any more happy with this company?"<br><span style="font-style:normal;">Chandler Bing,
-              Actor, FriendsAlot</span></h4>
-        </div>
-      </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+  </div> -->
 
   <div class="center">
 
@@ -138,8 +96,8 @@
           <div class="col-sm-6">
             <p>Contact us and we'll get back to you within 24 hours.</p>
             <p><span class="glyphicon glyphicon-map-marker"></span> Kollam , Kerala</p>
-            <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-            <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+            <p><span class="glyphicon glyphicon-phone"></span> +91 8848640183</p>
+            <p><span class="glyphicon glyphicon-envelope"></span> help@agrivator.com</p>
           </div>
           <div class="col-sm-6">
             <div class="row">
@@ -235,7 +193,8 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
         </button>
         <a class="navbar-brand" href="#">
           <div class="logo">
-            <img src="img/agri_logo1.png"></div>
+            <img src="img/agri_logo1.png">
+          </div>
         </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
