Edited home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<section>
+<!-- <section>
   <div class="jumbotron text-center">
     <h1>What we are?</h1>
     <p style="font-weight: 400;">We are a startup which combines modern techniques with traditional methods to increase productivity of crops. We
@@ -29,7 +29,7 @@
 
       </p>
   </div>
-
+ -->
 
 
 
@@ -39,7 +39,7 @@
       <source src="img/video.mp4" type="video/mp4">
     </video>
   </div> -->
-  <div class="video-main">
+  <!-- <div class="video-main">
     <center><video class="video-div" controls  autoplay loop  muted>
       <source src="img/video.mp4" type="video/mp4">
     Your browser does not support the video tag.
@@ -62,7 +62,7 @@
         <img class="image-fluid" style="max-width: 100%;max-height: 100%;" src="img/horticulture_video.jpg">
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- <div class="container-fluids center">
     <div class="row center">
       <div class="center-block"> -->
@@ -105,7 +105,7 @@
   </div> -->
 
 
-
+<!-- 
   <div class="center">
 
       <div class="container-fluid" style="background-image: url(img/contact.jpg); position: relative; top: 300px;">
@@ -136,7 +136,7 @@
         </div>
       </div>
 
-  </div>
+  </div> -->
   <!--<div  class="googleMap" id="googleMap" style="width:100%;"></div>
 
 
@@ -154,7 +154,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
 
 
-  <div class="footer" style="position: relative; top: 300px; width: 100%;">
+  <!-- <div class="footer" style="position: relative; top: 300px; width: 100%;">
     <footer class="text-center">
       <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
         <span class="glyphicon glyphicon-chevron-up"></span>
@@ -226,7 +226,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
       </div>
     </div>
   </nav>
-</section>
+</section> -->
 
   <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
@@ -279,7 +279,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
   </ul>
 </nav>-->
 
-  <script>
+  <!-- <script>
     $(document).ready(function () {
       // Add smooth scrolling to all links in navbar + footer link
       $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
@@ -327,7 +327,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
       };
       var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
     }
-  </script>
+  </script> -->
 
 </body>
 
