--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <title>Agrivator</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="home.css">
-  <!-- <link rel="stylesheet" href="home1.css"> -->
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="home1.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="img/agri logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap.css">
-  <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap-responsive.css">
+  <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap-responsive.css"> -->
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -161,8 +162,8 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
       </a><br><br>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-      <!-- Social buttons -->
-      <ul class="list-unstyled list-inline text-center">
+      Social buttons -->
+      <!-- <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
           <a class="btn-floating btn-fb btn-lg mx-1">
             <i class="fab fa-facebook-f"> </i>
@@ -189,10 +190,10 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
           </a>
         </li>
       </ul>
-      <!-- Social buttons -->
+      Social buttons 
     </footer>
   </div>
-</section>
+</section> -->
 
   <section>
   <nav class="navbar shadow navbar-default navbar-l navbar-fixed-top">
@@ -226,6 +227,20 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
       </div>
     </div>
   </nav>
+</section> 
+
+<!-- <section >
+  <div class="home">
+    <div class="logotext">
+      <img src="img/Logo_Text.png">
+      <p>
+        We aim to bring a change in the field of agriculture by efficient combination of technologies like artificial intelligence with IOT and modern farming techniques.
+      </p>
+    </div>
+    <div>
+      <img class="image1" src="img/image1.png">
+    </div>
+  </div>
 </section> -->
 
   <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
