--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </nav>
 </div>
 
+
 <div class="home">
   <div class="text">
     <img src="img/Logo_Text.png">
@@ -37,10 +38,26 @@
       We aim to bring a change in the field of agriculture by efficient combination of technologies like artificial intelligence with IOT and modern farming techniques.
     </p>
   </div>
-  <div class="bg_image">
+  <div class="bg_image1">
     <img src="img/image1.png">
   </div>  
 </div>
+
+
+
+<div class="vision">
+  <div class="bg_image2">
+    <img src="img/image2.png">
+  </div> 
+  <div>
+    <p class="heading">VISION</p>
+    <p>
+      We endeavour to infuse technology with agriculture to bring out a revolutionary change through product development which can ramp up crop growth and harvest with minimal resources and capital . We want society to dine with quality produce rich in nutrients and get rid of pesticides and other life threatening chemicals that we get to tuck-in today. We also make it a goal to boost the income of our farmer community and make sure they get their deserved remuneration
+    </p>
+  </div> 
+</div>
+
+
 
 <script>
   window.onscroll = function() {myFunction()};
