--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
   </div>  
 </div>
 
+<div class="video" width:200px height:>
+  <p>
+    <video controls>
+      <source src="img/video.mp4">
+    </video>
+  </p>
 
+  
+</div>
 
 <div class="vision">
   <div class="bg_image2">
