--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/agri logo.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <link rel="stylesheet" href="style.css"/>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>  
@@ -30,7 +31,7 @@
 </nav>
 </div>
 
-
+<section>
 <div class="home">
   <div class="text">
     <img src="img/Logo_Text.png">
@@ -42,9 +43,9 @@
     <img src="img/image1.png">
   </div>  
 </div>
+</section>
 
-
-
+<section>
 <div class="vision">
   <div class="bg_image2">
     <img src="img/image2.png">
@@ -57,8 +58,19 @@
   </div> 
 </div>
 
+</section>
 
+<section id = "product">
+  
+    <div class="heading1">
+      <h1>PRODUCT</h1>
+    </div>
 
+  
+
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script>
   window.onscroll = function() {myFunction()};
 
