--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
   </div>  
 </div>
 
-<div class="video" width:200px height:>
-  <p>
+<div class="video" >
+  <div id="video_player">
     <video controls>
       <source src="img/video.mp4">
-    </video>
-  </p>
-
+    </video> 
+  </div>
   
 </div>
 
@@ -58,11 +57,15 @@
     <img src="img/image2.png">
   </div> 
   <div>
-    <p class="heading">VISION</p>
+    <p class="heading">vision</p>
     <p>
       We endeavour to infuse technology with agriculture to bring out a revolutionary change through product development which can ramp up crop growth and harvest with minimal resources and capital . We want society to dine with quality produce rich in nutrients and get rid of pesticides and other life threatening chemicals that we get to tuck-in today. We also make it a goal to boost the income of our farmer community and make sure they get their deserved remuneration
     </p>
   </div> 
+</div>
+
+<div class="services">
+  <p class="heading">services</p>
 </div>
 
 
