--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>Agrivator</title>
 </head>
 <body>
+  <header>
   <div id="navbar">
   <nav>
     <input type="checkbox" id = "check">
@@ -29,7 +30,7 @@
 </ul>
 </nav>
 </div>
-
+</header>
 
 <div class="home">
   <div class="text">
