--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
 </div>
 
 <!-- contact -->
-<div class="contact">
+<!-- <div class="contact">
   <p class="heading">Contact Us</p>
   <div class="row">
-    <p class="para"style="text-align:center">Contact us and we will get back to you within 24 hours </p>
-    <!-- <p style="text-align: center;"></p> -->
-  <div class="container">
+    <p class="para">Contact us and we will get back to you within 24 hours </p>
+  <form action="">
+    <div class="container">
     <div class="row input-container">
         <div class="col-md-6 col-sm-12">
           <div class="styled-input">
@@ -247,8 +247,10 @@
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
-          <div class="styled-input" style="float:right;">
-            <input type="text" required />
+          <div class="styled-input" > -->
+           <!-- style="float:right;"  -->
+          
+            <!-- <input type="text" required />
             <label>Phone Number</label> 
           </div>
         </div>
@@ -263,8 +265,98 @@
         </div>
     </div>
   </div>
+  </form>
 </div>
+</div> -->
+
+<!-- <div class="contact" id="contact">
+  <div class="contact-form">
+      <h2 class="header">GET IN TOUCH</h2>
+      <hr>
+      <form action="">
+          <div class="form-container">
+              <input type="text" name="name" class="form-control" id="name" required placeholder="Name">
+              <input type="text" name="email" class="form-control" id="email" required placeholder="Email">
+              <textarea name="message" class="form-control" id="message" rows="4" required placeholder="Message"></textarea>
+              <button class="submit-btn" type="submit">SEND MESSAGE</button>
+          </div>
+      </form>
+  </div>
+</div> -->
+
+<!-- <div class="container">
+	<div class="row">
+			<h1>contact us</h1>
+	</div>
+	<div class="row">
+			<h4 style="text-align:center">Contact us and we will get back to you within 24hrs</h4>
+	</div>
+	<div class="row input-container">
+			<div class="col-sm-12">
+				<div class="styled-input wide">
+					<input type="text" required />
+					<label>Name</label> 
+				</div>
+			</div>
+      <div class=row1>
+			<div class="col-md-6 col-sm-12">
+				<div class="styled-input small">
+					<input type="text" required />
+					<label>Email</label> 
+				</div>
+			</div>
+			<div class="col-md-6 col-sm-12">
+				<div class="styled-input small" style="float:right;">
+					<input type="text" required />
+					<label>Phone Number</label> 
+				</div>
+			</div>
+      </div>
+			<div class="col-sm-12">
+				<div class="styled-input wide">
+					<textarea required></textarea>
+					<label>Message</label>
+				</div>
+			</div>
+			<div class="col-xs-12">
+				<div class="btn-lrg submit-btn">Submit</div>
+			</div>
+	</div>
+</div> -->
+
+<div class="contact-form">
+  
+  <h1>Contact</h1>
+  <h4>Contact us and we will get back to you within 24 hours</h4>
+  <form>
+    <!-- <div class="form"> -->
+  <!-- <div class="txtb wide">
+    <input type="text" required>
+    <label>Name</label>
+    
+  </div> -->
+
+  <div class="txtb small">
+    <input type="text" required>
+    <label>Email</label>
+  </div>
+
+  <div class="txtb small-right">
+    <input type="text" required>
+    <label>Phone No</label>
+  </div>
+
+  <div class="txtb wide">
+    <textarea required></textarea>
+    <label>Message</label> 
+  </div>
+  <!-- </div> -->
+  </form>
+
+  <a class="btn">Submit</a>
+
 </div>
+
 
 <!-- Footer -->
 <footer class="footer-distributed">
