--- a/index.html
+++ b/index.html
@@ -24,33 +24,33 @@
     </label>  
     <img src="img/Logo_with_Side_Text_-_White-removebg-preview 1.png">
   <ul>
-  <li><a href="#">Vision</a></li>
-  <li><a href="#">Product</a></li>
-  <li><a href="#">Service</a></li>
-  <li><a href="#">Team</a></li>
-  <li><a href="#">Contact</a></li>
+  <li><a href="#vision">Vision</a></li>
+  <li><a href="#product">Product</a></li>
+  <li><a href="#services">Service</a></li>
+  <li><a href="#team">Team</a></li>
+  <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
 </div>
 </header>
 
 <!-- Home -->
-<section>
+<section id ="home">
 <div class="home">
   <div class="text">
     <img src="img/Logo_Text.png">
-    <p style="text-align: left;">
+    <p>
       We aim to bring a change in the field of agriculture by efficient combination of technologies like artificial intelligence with IOT and modern farming techniques.
     </p>
   </div>
   <div class="bg_image1">
-    <img src="img/image1.png">
+    <img src="img/Group 18.png">
   </div>  
 </div>
 </section>
 
 <!-- Video -->
-<section>
+<section id  = "video">
 <div class="video" >
   <div id="video_player">
     <video controls>
@@ -61,7 +61,7 @@
 </section>
 
 <!-- Vision -->
-<section>
+<section id = "vision">
 <div class="vision">
   <div class="bg_image2">
     <img src="img/image2.png">
@@ -230,6 +230,8 @@
 
 <!-- Services -->
 </section>
+
+<section id="services">
 <div class="services">
   <p class="heading">services</p>
   <div class="container">
@@ -253,8 +255,9 @@
     </div>
   </div>
 </div>
+</section>
 
-
+<section id="team" >
 <div class="bg">
 <!-- Team -->
 <div class="team">
@@ -287,7 +290,7 @@
 </div>
 
 
-<div class="contact-form">
+<div class="contact-form" id="contact">
   
   <div>
     <p class="heading">Contact</p>
@@ -316,9 +319,10 @@
     <label>Message</label> 
   </div>
   <!-- </div> -->
-  </form>
+  
 
   <a class="btn">Submit</a>
+</form>
 
 </div>
 
@@ -340,7 +344,7 @@
     <p>Agrivator</p>
   </div>
 </footer>
-
+</section>
 
 
 <script>
