--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
 <!-- Footer -->
 <footer class="footer-distributed">
   <div class="footer-right">
-    <a href="https://www.facebook.com/agrivatortech"><i class="fab fa-facebook-square"></i></a>
-    <a href="https://www.linkedin.com/company/agrivator/"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.instagram.com/agrivator.co/"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.facebook.com/agrivatortech" target="_blank"><i class="fab fa-facebook-square"></i></a>
+    <a href="https://www.linkedin.com/company/agrivator/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/agrivator.co/" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-left">
     <p class="footer-links">
